# datacite_mapping

./: .gitignore  Makefile  README.md  pyproject.toml
src/datacite_schema/: __init__.py  helpers.py
src/datacite_schema/schema4/pkg_4/: __init__.py  metadata.py
src/datacite_schema/schema4/pkg_4/include/: __init__.py  datacite_contributor_type_v4.py  datacite_description_type_v4.py  datacite_funder_identifier_type_v4.py  datacite_number_type_v4.py  datacite_related_identifier_type_v4.py  datacite_relation_type_v4.py  datacite_resource_type_v4.py
src/datacite_schema/schema4/pkg_5/: __init__.py  metadata.py
src/datacite_schema/schema4/pkg_5/include/: __init__.py  datacite_date_type_v4.py  datacite_name_type_v4.py  datacite_relation_type_v4.py  datacite_resource_type_v4.py  datacite_title_type_v4.py
tests/datacite_schema/: conftest.py  test_basic.py
tests/datacite_schema/data/: example.json
